# authit

./: .dockerignore  .env.example  API.md  AUTHORIZATION.md  Cargo.toml  DESIGN_DOC.md  DOCKER.md  Dockerfile  README.md  SWAGGER.md  docker-compose.yml  docker-entrypoint.sh  openapi.yaml  postman_collection.json
migrations/: 001_create_users_table.sql  002_create_cdkeys_table.sql  003_create_products_table.sql  005_create_banned_hwids_table.sql
src/: logging.rs  main.rs
src/auth/: blacklist.rs  jwt.rs  mod.rs
src/data/: login.rs  mod.rs
src/db/: license.rs  mod.rs  product.rs  session.rs
src/handlers/: mod.rs
src/handlers/account/: login.rs  mod.rs  products.rs  redeem.rs  setrole.rs
src/handlers/private/: auth.rs  data.rs  hwid.rs  license.rs  mod.rs  product.rs
src/handlers/product/: compensate.rs  generator.rs  mod.rs
src/handlers/public/: auth.rs  health.rs  mod.rs
src/types/: core.rs  data.rs  mod.rs  requests.rs
