[package]
name = "authit"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3.1.12"
serde = { version = "1.0.228", features = ["rc"] }
serde_derive = "1.0.228"
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
