[package]
name = "authit"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["rc"] }
serde_derive = "1.0.228"
serde_json = "1.0.147"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
actix-web = "4.12.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
argon2 = "0.5"
jsonwebtoken = "9.3"
chrono = "0.4"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
